fixed empty cell spacing

--- a/src/App.css
+++ b/src/App.css
@@ -103,6 +103,7 @@
 .pencilCell{
   border:0;
   width:33%;
+  height:33%;
 }
 
 .cellValue{
